k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: autospec
  labels:
    app.kubernetes.io/name: proyekautospec
